--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <p id="status"></p>
 
 <script>  
-    const response = await fetch('https://ra-ini.onrender.com', {
+    const response = await fetch('https://ra-ini.onrender.com/scrape', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
         },
         body: JSON.stringify({ keyword })
     });
+    
 </script>
 
     
