--- a/index.html
+++ b/index.html
@@ -20,38 +20,38 @@
 </div>
 
 <script>
-document.getElementById('scraper-form').addEventListener('submit', async function(e) {
-    e.preventDefault();
-    const keyword = document.getElementById('keyword').value;
-    document.getElementById('status').innerText = 'Scraping in progress...';
-    document.getElementById('download-container').style.display = 'none';
+    document.getElementById('scraper-form').addEventListener('submit', async function(e) {
+        e.preventDefault();
+        const keyword = document.getElementById('keyword').value;
+        document.getElementById('status').innerText = 'Scraping in progress...';
+        document.getElementById('download-container').style.display = 'none';
 
-    try {
-        const response = await fetch('https://ra-ini.onrender.com/scrape', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ keyword })
-        });
+        try {
+            const response = await fetch('https://ra-ini.onrender.com/scrape', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ keyword })
+            });
 
-        if (response.ok) {
-            const blob = await response.blob();
-            const url = window.URL.createObjectURL(blob);
-            const downloadBtn = document.getElementById('download-btn');
-            downloadBtn.href = url;
-            downloadBtn.download = 'results.csv'; // Ujisti se, že máš příponu .csv
-            document.getElementById('download-container').style.display = 'block';
-            document.getElementById('status').innerText = 'Scraping complete. Click the button to download the file.';
-        } else {
-            document.getElementById('status').innerText = 'Scraping failed. Please try again.';
+            if (response.ok) {
+                const blob = await response.blob();
+                const url = window.URL.createObjectURL(blob);
+                const downloadBtn = document.getElementById('download-btn');
+                downloadBtn.href = url;
+                downloadBtn.download = 'results.csv';
+                document.getElementById('download-container').style.display = 'block';
+                document.getElementById('status').innerText = 'Scraping complete. Click the button to download the file.';
+            } else {
+                document.getElementById('status').innerText = 'Scraping failed. Please try again.';
+            }
+        } catch (error) {
+            console.error('Error:', error);
+            document.getElementById('status').innerText = 'An error occurred. Please try again later.';
         }
-    } catch (error) {
-        console.error('Error:', error);
-        document.getElementById('status').innerText = 'An error occurred. Please try again later.';
-    }
-});
+    });
+</script>
 
-    </script>
 </body>
 </html>
