--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     document.getElementById('scraper-form').addEventListener('submit', async function(e) {
         e.preventDefault();
         const keyword = document.getElementById('keyword').value;
-        document.getElementById('status').innerText = 'Scraping in progress...';
+        document.getElementById('status').innerText = 'Už se to hledá...';
         document.getElementById('download-container').style.display = 'none';
 
         try {
