--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </form>
     <p id="status"></p>
 
-        <div id="download-container" style="display: none;">
-    <a id="download-btn">Stáhnout CSV</a>
+<div id="download-container" style="display: none;">
+     <button id="download-btn">Stáhnout CSV</button>
 </div>
-
+  
 <script>
     document.getElementById('scraper-form').addEventListener('submit', async function(e) {
         e.preventDefault();
