--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
     </form>
     <p id="status"></p>
 
+
+
+    
+<form id="scraper-form">
+    <label for="keyword">Sem zadej klíčové slovo nebo frázi:</label>
+    <input type="text" id="keyword" name="keyword" required>
+    <button type="submit">Vyhledej</button>
+</form>
+<p id="status"></p>
+
+<!-- Kontejner pro tlačítko stažení CSV -->
+<div id="download-container" style="display: none; margin-top: 20px;">
+    <a id="download-btn">Stáhnout CSV</a>
+</div>
+
+<!-- Kontejner pro výsledky -->
+<div id="results-container" style="margin-top: 20px;"></div>
+
+
+
+    
+   
         <div id="download-container" style="display: none;">
     <a id="download-btn">Stáhnout CSV</a>
 </div>
