--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <a id="download-btn">Stáhnout CSV</a>
 </div>
 
+<!-- Kontejner pro výsledky -->
+<div id="results-container" style="margin-top: 20px;"></div>
+    
     
 <script>
     document.getElementById('scraper-form').addEventListener('submit', async function(e) {
