--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Můj první Google vyhledávač</title>
+
+<style>
+        #results-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            background-color: #f5f5f5; /* Světle šedé pozadí */
+        }
+
+        #results-table th, #results-table td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: left;
+        }
+
+        #results-table th {
+            background-color: #ddd;
+        }
+
+        #results-container {
+            margin-top: 20px;
+        }
+    </style>
+
 </head>
 <body>
     <h1>Google vyhledávač</h1>
