--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     
     <!-- Kontejner pro tlačítko stažení CSV -->
     <div id="download-container" style="display: none; margin-top: 20px;">
-        <a id="download-btn">Stáhnout CSV</a>
+    <a id="download-btn" class="button">Stáhnout CSV</a>
     </div>
+
 
     <script>
         document.getElementById('scraper-form').addEventListener('submit', async function(e) {
