--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <tr>
                             <th>Název</th>
                             <th>Odkaz</th>
-                            <th>Popis</th>
+                            <th>Meta popisek</th>
                         </tr>
                     `;
 
