--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <tr>
                             <th>Název</th>
                             <th>Odkaz</th>
-                            <th>Meta popisek</th>
+                            <th>Popisek</th>
                         </tr>
                     `;
 
@@ -69,6 +69,7 @@
                                 <td>${title}</td>
                                 <td><a href="${link}" target="_blank">${link}</a></td>
                                 <td>${snippet}</td>
+                                <td>${meta_description}</td>
                             `;
                             table.appendChild(row);
                         }
