--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
             document.getElementById('results-container').innerHTML = ''; // Čistí předchozí výsledky
 
             try {
-                const response = await fetch('https://ra-ini.onrender.com/scrape', {
-                    method: 'POST',
+               const response = await fetch('https://ra-ini.onrender.com/scrape', {
+                    method: 'POST', // Zajistí, že požadavek je typu POST
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({ keyword })
                 });
-
                 if (response.ok) {
                     const blob = await response.blob();
                     const text = await blob.text();
